force-app/main/default/objects/PDRI__Metadata_Component_Deployment_Result__c/fields/PDRI__Metadata_Deployment_Result__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Metadata_Deployment_Result__c</fullName>
    <label>Metadata Deployment Result</label>
    <referenceTo>PDRI__Metadata_Deployment_Result__c</referenceTo>
    <relationshipLabel>Metadata Component Deployment Results</relationshipLabel>
    <relationshipName>Metadata_Component_Deployment_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>