force-app/main/default/objects/PDRI__Metadata_Component_Deployment_Result__c/fields/PDRI__Problem__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Problem__c</fullName>
    <label>Problem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>