force-app/main/default/objects/PDRI__Metadata_Component_Deployment_Result__c/fields/PDRI__Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Problem_Type__c</fullName>
    <label>Problem Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>